Small changes to quiz design

--- a/static/main.css
+++ b/static/main.css
@@ -4,6 +4,9 @@
   --our-purple: #a278d7; /* Define your purple color as a variable */
   --correct-green: #78d7a1;
   --wrong-red: #df7584;
+  --submit-blue: rgb(99, 157, 239);
+
+
   
 
 }
@@ -218,6 +221,13 @@
   padding:40px;
 }
 /* Quiz Page */
+.what-country{
+  
+  font-style: comfortaa;
+  text-align: center;
+  font-size: 60px;
+  margin-bottom: 30px;
+}
 
 .edit-h1{
   text-align: center;
@@ -297,9 +307,7 @@
   margin-top: 35px;
   padding-right: 60px;
 }
-.score-and-question{
 
-}
 .score-and-question-text{
   margin-top:35px; 
   color: rgb(53, 182, 222);
@@ -318,34 +326,37 @@
   margin-right: 10px;
 }
 
-/* BOTTOM CONTAINER W NEXT AND FEEDBACK*/
-.next-button-style-submit {
-  padding: 20px 150px;  /* Change size of the button */
-  color: white;  /* Text color */
-  background-color:#a278d7;
-  border-radius: 15px;
-  border-color: var(--our-purple);
-  margin-top: 80px;
-  margin-left: 30px;
-  font-weight: bold;
-}
-.next-button-style-next{
-  padding: 20px 150px;  /* Change size of the button */
-  color: white;  /* Text color */
-  background-color:#a278d7;
-  border-radius: 15px;
-  border-color: var(--our-purple);
-  margin-top: 80px;
-  margin-left: 30px;
-  font-weight: bold;
+/* Submit BOTTOM */
+.submit-button {
+  width: 25%;            /* Set the width of the button to 50% of its container */
+  padding: 15px 0;       /* Add padding for better height and comfort */
+  font-size: 20px;       /* Larger font size for better visibility */
 
+  
+  margin: 20px auto;  
+  margin-top: 50px;
+    
+  display: block;       /* Ensure the button is a block element to take full width specified */
+  
+  background-color: var(--submit-blue);
+  font-weight: bold;
 }
-.next-and-submit-container{
+
+/* Next Button*/
+.next-button-style {
+  border: 1px solid;
+  width: 15%;
+  padding: 15px;
+  display: block;
   text-align: center;
-  margin: 0 auto;
-  margin-top: -50px;
-  margin-right: 200px;
+  background-color: #a278d7;
+  margin: 0 0 0 auto;  /* Adjusts the margin to auto on the left side, pushing the button to the right */
+  border-radius: 10px;
+  border-color: #a278d7;
+  color: white;
+  font-weight: bold;
 }
+
 .feedback-and-next{
   display: flex;
   padding-bottom: 30px;
