--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -10,7 +10,7 @@
 
         <div class="col-md-6 d-flex flex-column align-items-center justify-content-center text-center">
             <span class="homepage-bio">
-                Your number one source for learning to detect hispanic accents
+                Your #1 source for learning to detect hispanic accents
             </span>
 
             <a class="btn get-started-button" href="/explore">
