--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -6,12 +6,19 @@
     <!-- First Row: Title and Score Info -->
     <div class="row">
         <div class="col-md-12">
-            <h1 class="what-country">What Country am I from? ✨</h1>
-            <div class="text-right">
-                <small>Question {{ current_question_number }} of {{ total_questions }} Score: {{ score }}</small>
+            <div class="what-country edit-h1">What country is this accent from?</div>
+            <div class="question-track">
+                {{ current_question_number }}/{{ total_questions }}            
             </div>
+            <div class="score-box-align">
+                <div class="score-container">
+                    Score: {{ score }}
+                </div>
+            </div>
+
         </div>
     </div>
+    
 
     <!-- Second Row: Audio and Options -->
     <div class="row">
@@ -22,48 +29,46 @@
                 <source src="{{ url_for('static', filename='audio/' + item.audio_quiz) }}" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
-            <p class="audio-label">Example 1</p> <!-- Label for the first audio -->
+            <div class="audio-label">Example 1</div> <!-- Label for the first audio -->
 
             <!-- Second Audio Element -->
             <audio controls class="quiz-audio-button">
                 <source src="{{ url_for('static', filename='audio/' + item.audio_quiz) }}" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
-            <p class="audio-label">Example 2</p> <!-- Label for the second audio -->
+            <div class="audio-label">Example 2</div> <!-- Label for the second audio -->
             {% endif %}
         </div>
+
         <div class="col-md-9">
-            <form action="{{ url_for('quiz', quiz_id=quiz_id) }}" method="post">
                 <div class="option-container d-flex justify-content-center flex-wrap">
                     {% for option in item.options %}
-                    <button type="button" class="btn btn-outline-primary option-button mx-2 my-1" onclick="selectAnswer('{{ option }}')">
+                    <button type="button" id="option-button" class="btn btn-outline-primary option-button mx-2 my-1">
                         {{ option }}
                     </button>
                     {% endfor %}
                 </div>
                 <!-- Submit Button for checking answers -->
-                <button type="submit" name="check_answer" class="btn btn-info submit-button ">Submit Answer</button>
-                <input type="hidden" name="selectedAnswer" id="selectedAnswer">
-                <input type="hidden" name="attempts" value="{{ attempts }}">
-                <input type="hidden" name="score" value="{{ score }}">
-            </form>
+                <button id="submit-answer" data-url="{{ url_for('quiz', quiz_id=quiz_id) }}" class="submit-button "disabled>Submit Answer</button>
         </div>
     </div>
+    <input type="hidden" name="selectedAnswer" id="selectedAnswer">
+    <input type="hidden" name="attempts" value="{{ attempts }}">
+    <input type="hidden" name="score" value="{{ score }}">
+    <div id="quiz-id" data-quiz-id="{{ quiz_id }}"></div>
 
     <!-- Third Row: Next Button and Feedback -->
     <div class="row">
         <div class="col-md-12 text-center">
-            <form action="{{ url_for('quiz', quiz_id=quiz_id) }}" method="post">
-                <button id="submit-answer" name="next_question" class="next-button-style btn btn-primary mt-3"> Continue</button>
+                <button id="next-question" class="next-button-style btn btn-primary mt-3" disabled> Continue</button>
                 {% if feedback %}
                 <div id="feedback-container" class="alert alert-info feedback-style mx-auto mt-2">
                     {{ feedback }}
                 </div>
                 {% endif %}
-                <input type="hidden" name="score" value="{{ score }}">
-            </form>
         </div>
     </div>
+    <input type="hidden" name="score" value="{{ score }}">
 
     {% else %}
     <p class="no-quiz-data">No quiz data found.</p>
@@ -71,10 +76,5 @@
 </div>
 
 <script src="{{ url_for('static', filename='js/quiz.js') }}"></script>
-<script>
-    function selectAnswer(option) {
-        const selectedAnswerInput = document.getElementById('selectedAnswer');
-        selectedAnswerInput.value = option;  // Set the value of the hidden input to the selected option
-    }
-</script>
+
 {% endblock %}
