Added Audio for The Quiz and updated server vars

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -36,7 +36,7 @@
 
             <!-- Second Audio Element -->
             <audio controls class="quiz-audio-button">
-                <source src="{{ url_for('static', filename='audio/' + item.audio_quiz) }}" type="audio/mpeg">
+                <source src="{{ url_for('static', filename='audio/' + item.audio_quiz_2) }}" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
             <div class="audio-label">Example 2</div> <!-- Label for the second audio -->
