--- a/templates/layout3.html
+++ b/templates/layout3.html
@@ -38,6 +38,15 @@
           </div>
       </a>
       </div>
+      <div class="col-md-6 explore-navbar">
+        <a class="nav-link" href="/explore">
+            <div class="explore-nav-container">
+                <img src="{{ url_for('static', filename='images/Turtle-Purple.png') }}" alt="Logo" class="img-fluid link-navbar-image">
+                <span class="explore-nav-text">Back To Explore</span>
+            </div>
+        </a>
+    </div>
+
   </div>
 
     <div class="container-layout">{% block content %} {% endblock %}</div>
