--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,83 +1,97 @@
-{% extends "layout.html" %}
-{% block content %}
+{% extends "layout.html" %} {% block content %}
 
 <div id="quiz-container">
-    {% if item %}
-    <!-- First Row: Title and Score Info -->
-    <div class="what-country edit-h1 col-md-12">What country is this accent from?</div>
-    <div class="row">
-        <div class="col-md-12 score-and-accent-tracker">
-            <div class="question-track col-md-6">
-                <p class="question-track-mover">
-                    <b>Question</b>: {{ current_question_number }}/{{ total_questions }}
-
-                </p>
-            </div>
-            <div class="score-box-align col-md-6">
-                <div class="score-container">
-                    Score: {{ score }}
-                </div>
-            </div>
-
-        </div>
+  {% if item %}
+  <!-- First Row: Title and Score Info -->
+  <div class="what-country edit-h1 col-md-12">
+    What country is this accent from?
+  </div>
+  <div class="row">
+    <div class="col-md-12 score-and-accent-tracker">
+      <div class="question-track col-md-6">
+        <p class="question-track-mover">
+          <b>Question</b>: {{ current_question_number }}/{{ total_questions }}
+        </p>
+      </div>
+      <div class="score-box-align col-md-6">
+        <div class="score-container">Score: {{ score }}</div>
+      </div>
     </div>
-    
+  </div>
 
-    <!-- Second Row: Audio and Options -->
-    <div class="row">
-        <div class="col-md-3 q-audio-and-image-formatting">
-            {% if item.audio_quiz %}
-            <!-- First Audio Element -->
-            <audio controls class="quiz-audio-button mb-2">
-                <source src="{{ url_for('static', filename='audio/' + item.audio_quiz) }}" type="audio/mpeg">
-                Your browser does not support the audio element.
-            </audio>
-            <div class="audio-label">Example 1</div> <!-- Label for the first audio -->
+  <!-- Second Row: Audio and Options -->
+  <div class="row">
+    <div class="col-md-3 q-audio-and-image-formatting">
+      {% if item.audio_quiz %}
+      <!-- First Audio Element -->
+      <audio controls class="quiz-audio-button mb-2">
+        <source
+          src="{{ url_for('static', filename='audio/' + item.audio_quiz) }}"
+          type="audio/mpeg"
+        />
+        Your browser does not support the audio element.
+      </audio>
+      <div class="audio-label">Example 1</div>
+      <!-- Label for the first audio -->
 
-            <!-- Second Audio Element -->
-            <audio controls class="quiz-audio-button">
-                <source src="{{ url_for('static', filename='audio/' + item.audio_quiz) }}" type="audio/mpeg">
-                Your browser does not support the audio element.
-            </audio>
-            <div class="audio-label">Example 2</div> <!-- Label for the second audio -->
-            {% endif %}
-        </div>
+      <!-- Second Audio Element -->
+      <audio controls class="quiz-audio-button">
+        <source
+          src="{{ url_for('static', filename='audio/' + item.audio_quiz) }}"
+          type="audio/mpeg"
+        />
+        Your browser does not support the audio element.
+      </audio>
+      <div class="audio-label">Example 2</div>
+      <!-- Label for the second audio -->
+      {% endif %}
+    </div>
 
-        <div class="col-md-9">
-                <div class="option-container d-flex justify-content-center flex-wrap">
-                    {% for option in item.options %}
-                    <button type="button" id="option-button" class="btn btn-outline-primary option-button mx-2 my-1">
-                        {{ option }}
-                    </button>
-                    {% endfor %}
-                </div>
-               
+    <div class="col-md-9">
+      <div class="option-container d-flex justify-content-center flex-wrap">
+        {% for option in item.options %}
+        <button
+          type="button"
+          id="option-button"
+          class="btn btn-outline-primary option-button mx-2 my-1"
+        >
+          {{ option }}
+        </button>
+        {% endfor %}
+      </div>
     </div>
     <!-- Third Row: Next Button and Feedback -->
 
-    <div class="col-md-12 button-rows">
-         <!-- Submit Button for checking answers -->
-        <div col-md-8 class="button-test">
-            <button id="submit-answer" data-url="{{ url_for('quiz', quiz_id=quiz_id) }}" class="submit-button "disabled>Submit Answer</button>
-            <input type="hidden" name="selectedAnswer" id="selectedAnswer">
-            <input type="hidden" name="attempts" value="{{ attempts }}">
-            <input type="hidden" name="score" value="{{ score }}">
-            <div id="quiz-id" data-quiz-id="{{ quiz_id }}"></div>
-            <button id="next-question" class="next-style-button" disabled> Continue</button>
-            <div class="feedbackbox">    
-            </div>
-            <input type="hidden" name="score" value="{{ score }}">
-            {% else %}
-            <p class="no-quiz-data">No quiz data found.</p>
-            {% endif %}
-        </div>
-      
-
-
+    <div class="row col-md-12">
+      <!-- Submit Button for checking answers -->
+      <div col-md-8 class="button-test button-rows">
+        <button
+          id="submit-answer"
+          data-url="{{ url_for('quiz', quiz_id=quiz_id) }}"
+          class="submit-button"
+          disabled
+        >
+          Submit Answer
+        </button>
+        <input type="hidden" name="selectedAnswer" id="selectedAnswer" />
+        <input type="hidden" name="attempts" value="{{ attempts }}" />
+        <input type="hidden" name="score" value="{{ score }}" />
+        <div id="quiz-id" data-quiz-id="{{ quiz_id }}"></div>
+        <input type="hidden" name="score" value="{{ score }}" />
+        {% else %}
+        <p class="no-quiz-data">No quiz data found.</p>
+        {% endif %}
+      </div>
+      <button id="next-question" disabled>Continue</button>
     </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="feedbackbox"></div>
+    </div>
+
+    <script src="{{ url_for('static', filename='js/quiz.js') }}"></script>
+
+    {% endblock %}
+  </div>
 </div>
-
-
-<script src="{{ url_for('static', filename='js/quiz.js') }}"></script>
-
-{% endblock %}
