--- a/static/main.css
+++ b/static/main.css
@@ -540,9 +540,10 @@
 .feedback-style {
   position: absolute;
   text-align: center;
+  align-items: center;
   margin-top: 10px;  
   width: 100%;
-  height: 235px;
+  height: 46px;
   color:white;
   font-size: 20px;
   font-weight: bolder;
