--- a/static/main.css
+++ b/static/main.css
@@ -18,27 +18,23 @@
 /* All */
 .nav-bar{
   background-color: rgb(245, 245, 245);
+  align-items: center;
 
 }
 .logo-container {
   position: relative;
   display: inline-block;
 }
-.quiz-nav-container{
-  position: relative;
-  display: inline-block;
-  margin-top: 10px;
 
-}
 .explore-nav-text{
   color: #a278d7;
-    font-size: 20px;
+  font-size: 20px;
+  font-weight: bold;
 }
-.explore-nav-container{
+.explore-navbar{
   position: relative;
   display: inline-block;
-  margin-top: 10px;
-  padding-left: 100px;
+  padding-left: 60%;
 }
 .logo-navbar {
   padding-left: 60px;
@@ -56,11 +52,12 @@
 .link-navbar-quiz-image{
   height: 40px;
   width: auto;
-    
-  
 }
 .quiz-navbar{
   font-size: 20px;
+  position: relative;
+  display: inline-block;
+  font-weight: bold;
   
 }
 
