--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -38,16 +38,16 @@
           </div>
       </a>
       </div>
-      <div class="col-md-3 explore-navbar">
+      <div class="explore-navbar">
         <a class="nav-link" href="/explore">
-            <div class="explore-nav-container">
+            <div>
                 <span class="explore-nav-text">Explore Countries</span>
             </div>
         </a>
     </div>
-    <div class="col-md-3 quiz-navbar">
+    <div class="quiz-navbar">
       <a class="nav-link" href="/quiz/1">
-          <div class="quiz-nav-container">
+          <div>
               <span class="explore-nav-text">Quiz</span>
           </div>
       </a>
