--- a/templates/layout3.html
+++ b/templates/layout3.html
@@ -38,10 +38,10 @@
           </div>
       </a>
       </div>
-      <div class="col-md-6 explore-navbar">
+      <div class="explore-navbar">
         <a class="nav-link" href="/explore">
             <div class="explore-nav-container">
-                <span class="explore-nav-text">Back To Explore</span>
+                <span class="explore-nav-text">Explore Countries</span>
             </div>
         </a>
     </div>
