--- a/templates/score.html
+++ b/templates/score.html
@@ -4,10 +4,10 @@
 <div class="row align-items-center justify-content-center">
     <div class="col-md-8 score-box d-flex flex-column align-items-center">
         {% if score > 3 %}
-        <img src="{{ url_for('static', filename='images/winribbon.png') }}" class="score-image-pass">
+        <img src="{{ url_for('static', filename='images/clap.gif') }}" class="score-image-pass">
         <div class="score-text-box">
             <div class="score-statement">
-                Congratulations
+                Congratulations!!! 🎉
             </div>
             <div class="score-text">
                 You have successfully completed our quiz!
