--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -63,36 +63,30 @@
     </div>
     <!-- Third Row: Next Button and Feedback -->
 
-    <div class="row col-md-12">
+    <div class="col-md-12 button-rows">
       <!-- Submit Button for checking answers -->
-      <div col-md-8 class="button-test button-rows">
-        <button
-          id="submit-answer"
-          data-url="{{ url_for('quiz', quiz_id=quiz_id) }}"
-          class="submit-button"
-          disabled
-        >
-          Submit Answer
-        </button>
-        <input type="hidden" name="selectedAnswer" id="selectedAnswer" />
-        <input type="hidden" name="attempts" value="{{ attempts }}" />
-        <input type="hidden" name="score" value="{{ score }}" />
-        <div id="quiz-id" data-quiz-id="{{ quiz_id }}"></div>
-        <input type="hidden" name="score" value="{{ score }}" />
-        {% else %}
-        <p class="no-quiz-data">No quiz data found.</p>
-        {% endif %}
-      </div>
-      <button id="next-question" disabled>Continue</button>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
-      <div class="feedbackbox"></div>
-    </div>
+     <div col-md-8 class="button-test">
+         <button id="submit-answer" data-url="{{ url_for('quiz', quiz_id=quiz_id) }}" class="submit-button "disabled>Submit Answer</button>
+         <input type="hidden" name="selectedAnswer" id="selectedAnswer">
+         <input type="hidden" name="attempts" value="{{ attempts }}">
+         <input type="hidden" name="score" value="{{ score }}">
+         <div id="quiz-id" data-quiz-id="{{ quiz_id }}"></div>
+         <button id="next-question" class="next-question-style" disabled> Continue</button>  
+         </div>
+         <input type="hidden" name="score" value="{{ score }}">
+         {% else %}
+         <p class="no-quiz-data">No quiz data found.</p>
+         {% endif %}
+     </div>
+   
 
-    <script src="{{ url_for('static', filename='js/quiz.js') }}"></script>
 
-    {% endblock %}
+ </div>
   </div>
 </div>
+<div class="feedbackbox col-md-12">  
+
+
+<script src="{{ url_for('static', filename='js/quiz.js') }}"></script>
+
+{% endblock %}
