--- a/static/main.css
+++ b/static/main.css
@@ -1,20 +1,3 @@
-/* OUR STYLE COLORS */
-
-:root {
-  --our-purple: #a278d7; /* Define your purple color as a variable */
-  --correct-green: #28b163;
-  --wrong-red: #ed334c;
-  --submit-blue: rgb(99, 157, 239);
-
-
-  
-
-}
-
-/*Three Font Sizes*/
-
-
-
 /* All */
 .nav-bar{
   background-color: rgb(245, 245, 245);
@@ -53,9 +36,7 @@
   height: 40px;
   width: auto;
 }
-.quiz-navbar{
-  
-}
+
 .logo-title {
     position: absolute;
     top: 50%;  /* Center vertically */
@@ -264,15 +245,34 @@
   border-color: #a278d7;
   color: white;
   font-weight: bold;
+  position: relative; /* Required for positioning pseudo-elements */
+  overflow: hidden; /* Ensures no overflow outside the border-radius */
 }
-.next-button:hover{
-  background-color: white;
-  color: #a278d7;
+.next-button::after {
+  content: "";
+  position: absolute;
+  bottom: 0px; 
+  left: 0;
+  width: 100%;
+  height: 6px; 
+  background-color: #7839c5; 
+  border-radius: 0 0 15px 15px;
 }
 
-.next-button-text{
-  color: white;
-  font-weight: bold;
+.next-button:active {
+  box-shadow: none;
+  top: 3px; 
+  background-color: #a278d7; 
+}
+
+.next-button:active::after {
+  height: 0;
+  background-color: transparent; 
+}
+
+.next-button:hover{
+  background-color:#b896e3;
+  color:white;
 }
 
 .country-title {
