--- a/static/main.css
+++ b/static/main.css
@@ -407,11 +407,7 @@
     font-size: 1.2em;
     color: red;  /* or a suitable color based on correct (green) or incorrect (red) */
     margin-top: 20px;
-}
-.feedbackbox{
-  text-align: center;
-  margin: 0 auto;
-  width: 100%;
+    text-align: center;
 }
 
 .score-container {
@@ -542,24 +538,27 @@
 
 /* Feedback directly below the Next button */
 .feedback-style {
-  position: absolute;
-  text-align: center;
-  align-items: center;
   margin-top: 10px;  
-  width: 100%;
-  height: 46px;
+  width: 101%;
+  height: 70px;
   color:white;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: bolder;
-  display: flex;
+  text-align: center;
+  padding-top: 10px;
+
+  
 }
 
 .correct-feedback {
-  background-color: green;  /* Color for correct answers */
+  background-color: green;
+  /* Color for correct answers */
 }
 
 .incorrect-feedback {
-  background-color: red;  /* Color for incorrect answers */
+  background-color: red;
+  text-align: center;
+    /* Color for incorrect answers */
 
 }
 
