--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -82,7 +82,7 @@
  </div>
   </div>
 </div>
-<div class="feedbackbox col-md-12">  
+<div class="feedbackbox"> </div>
 
 <script src="{{ url_for('static', filename='js/quiz.js') }}"></script>
 
