--- a/static/main.css
+++ b/static/main.css
@@ -49,14 +49,24 @@
   display: flex;
   margin-left: 40px;
 }
-
+body{
+  font-family: "Lexend", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;
+}
 /* Homepage */
 
 .homepage-bio {
   font-size: 37px;
-  font-weight: bold;
+  font-weight: 500;
   padding-bottom: 120px;
   margin-right: 100px;
+  padding-top: 100px;
+}
+.hoela{
+  height: 550px;
+  margin-left: 100px;
 }
 
 .get-started-button {
@@ -87,6 +97,7 @@
   background-color: #7839c5; 
   border-radius: 0 0 15px 15px;
 }
+
 
 .get-started-button:active {
   box-shadow: none;
@@ -175,7 +186,7 @@
     display: block;
     text-align: center;
     font-size: 25px;
-    font-weight: bold;
+    font-weight: 500;
     color: var(--our-purple);
     
 }
@@ -232,6 +243,7 @@
 .header-container{
   text-align: center;
   display: flex;
+  padding-top: 25px;
 }
 .next-button{
   border: 1px solid;
@@ -282,8 +294,8 @@
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
-  font-size: 60px;
-  font-weight: bold;
+  font-size: 70px;
+  font-weight: 700;
 
 }
 .section-tracker{
