--- a/static/main.css
+++ b/static/main.css
@@ -716,9 +716,36 @@ body{
     text-align: center;
     background-color: #a278d7;
     border-radius: 15px;
-    
-}
-
+    position: relative; /* Required for positioning pseudo-elements */
+    overflow: hidden; /* Ensures no overflow outside the border-radius */
+  }
+  .restart-exit-button::after {
+    content: "";
+    position: absolute;
+    bottom: 0px; /* Adjust as needed for 'thickness' */
+    left: 0;
+    width: 100%;
+    height: 5px; /* Thickness of the bottom border */
+    background-color: #7839c5; /* Darker purple for 3D effect */
+    border-radius: 0 0 15px 15px; /* Follows the border-radius of the button */
+  }
+  .restart-exit-button:active::after {
+    height: 0; 
+    background-color: transparent;
+  }
+  
+  
+  .restart-exit-button:hover{
+    background-color:#b896e3;
+    color:white;
+  }
+  
+  .restart-exit-button:active {
+    box-shadow: none;
+    top: 2px; 
+    background-color: #a278d7; 
+  }
+  
 .restart-exit-title{
     font-weight: bold;
     color: white;
